{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 10,
  "lineage": "b99aafd8-6793-6080-f14d-573bb53b619a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152060928451:vpc/vpc-0981f9ca6973c370a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e0372af158f21338",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04c60f360678f87db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0981f9ca6973c370a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056f9307249573d17",
            "owner_id": "152060928451"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029eb80bc237bec6f",
            "arn": "arn:aws:ec2:us-east-1:152060928451:instance/i-0d5bc976f713212eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0d5bc976f713212eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Assignment2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009dd67a10e483bd1",
            "private_dns": "ip-172-31-83-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.123",
            "public_dns": "ec2-34-227-115-195.compute-1.amazonaws.com",
            "public_ip": "34.227.115.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0fc4a4c57b26c5ca3",
                "volume_size": 16,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "ec2_sg-20230714030906217000000001",
              "ec2_sg-20230714030906220500000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0371a446151089a57",
            "tags": {
              "project": "clo835"
            },
            "tags_all": {
              "project": "clo835"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06df91c68480d707d",
              "sg-0b40164f06bdc64ec"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "data.aws_vpc.default",
            "module.dev_ssh_sg.aws_security_group.this",
            "module.dev_ssh_sg.aws_security_group.this_name_prefix",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152060928451:security-group/sg-0b40164f06bdc64ec",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-0b40164f06bdc64ec",
            "ingress": [],
            "name": "ec2_sg-20230714030906220500000002",
            "name_prefix": "ec2_sg-",
            "owner_id": "152060928451",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0981f9ca6973c370a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "127.0.0.1/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2335376157",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b40164f06bdc64ec",
            "security_group_rule_id": "sgr-0885397750b9064b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.dev_ssh_sg.aws_security_group.this",
            "module.dev_ssh_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152060928451:security-group/sg-06df91c68480d707d",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-06df91c68480d707d",
            "ingress": [],
            "name": "ec2_sg-20230714030906217000000001",
            "name_prefix": "ec2_sg-",
            "owner_id": "152060928451",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0981f9ca6973c370a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1574145580",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06df91c68480d707d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1094343592",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06df91c68480d707d",
            "security_group_rule_id": "sgr-035f690c2fa43b59e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}